# kernup

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  implementation_roadmap_v0_1.md  kernup_master_plan.md  pyproject.toml
kernup/: __init__.py  errors.py  types.py
kernup/benchmark/: __init__.py  runtime.py
kernup/cli/: bench.py  main.py  optimize.py  patch.py  profile.py  status.py
kernup/config/: __init__.py  defaults.py  schema.py
kernup/patch/: __init__.py  sglang.py  simple.py  smoke.py  tgi.py  vllm.py
kernup/phase1/: __init__.py  hyperparams.py  scoring.py  search.py
kernup/phase2/: __init__.py  evolution.py  generator.py  healer.py  pipeline.py  prompt.py
kernup/phase2/validator/: __init__.py  benchmark.py  numerical.py  static.py
kernup/profiler/: __init__.py  baseline.py  breakdown.py  hardware.py
kernup/storage/: __init__.py  db.py  export.py
kernup/utils/: gpu.py  runs.py
scripts/: release_smoke_windows.ps1
tests/: test_phase1_hyperparams.py  test_phase1_scoring.py  test_phase1_search.py  test_phase2_evolution.py  test_phase2_pipeline.py  test_smoke_cli.py
